--- a/resources/style/webfacestyle.css
+++ b/resources/style/webfacestyle.css
@@ -1,7 +1,9 @@
 
 /*** General HTML definitions ***/
 
-body {
+/*** idegaWeb WebFace CSS classes ***/
+
+.wf_body {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	background-color: #ECE9D8;
@@ -9,25 +11,13 @@ body {
 	margin: 0px;
 }
 
-td {
-	vertical-align: middle;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
-}
-
-a {
+.wf_body a {
 	text-decoration: none;
   	font-weight: bold;
 }
 
-a:hover {
+.wf_body a:hover {
 	text-decoration: underline;
-}
-
-/*** idegaWeb WebFace CSS classes ***/
-
-.wf_body {
-	margin: 0px;
 }
 
 .wf_smalltext {
@@ -71,6 +61,13 @@ a:hover {
 .wf_simplebox .wf_titlebar {
 	border-right-width: 0px;
 	margin: 0px;
+}
+
+.wf_block{
+	border: 1px solid #848284;
+	/***border-style: double;***/
+	/***width:100%;***/
+	margin: 4px 4px 4px 4px;
 }
 
 .wf_blockmainarea {
@@ -181,6 +178,53 @@ a:hover {
 	font-size: 10px;
   	font-weight: normal;
 }
+
+/***WFMenu***/
+
+.wf_viewmenu {
+	border-spacing: 1px;
+	padding: 3px;
+	/***width: 100%;***/
+	margin: 1px 1px 1px 1px;
+}
+
+.wf_viewmenubuttonselected,.wf_viewmenubuttondeselected, .wf_menuheader{
+	padding: 4px 4px 4px 15px;
+	vertical-align: middle;
+	margin:0px;
+	list-style: none;
+}
+
+wf_viewmenubuttondeselected .wf_viewmenu{
+	padding: 0px 0px 0px 0px;
+}
+
+.wf_viewmenubuttonselected {
+	border-top: 1px solid #848284;
+	border-left: 1px solid #848284;
+	border-bottom: 1px solid #FFFFFF;
+	border-right: 1px solid #FFFFFF;
+	background-color: #DDD8C4;
+	color: #ffffff;
+}
+
+.wf_viewmenubuttondeselected a {
+	color: black;
+  	font-weight: normal;
+}
+
+.wf_viewmenubuttondeselected, .wf_menuheader{
+	border-top: 1px solid #FFFFFF;
+	border-left: 1px solid #FFFFFF;
+	border-bottom: 1px solid #848284;
+	border-right: 1px solid #848284;
+}
+
+.wf_menuheader{
+	font-weight: bold;
+}
+
+/***WFMenu***/
 /*TabBar*/
 
 .wf_tabbarmainarea {
@@ -252,38 +296,6 @@ a:hover {
 
 /*End TabBar*/
 
-.wf_viewmenu {
-	border-spacing: 1px;
-	padding: 3px;
-	width: 100%;
-}
-
-.wf_viewmenubuttonselected {
-	border-top: 1px solid #848284;
-	border-left: 1px solid #848284;
-	border-bottom: 1px solid #FFFFFF;
-	border-right: 1px solid #FFFFFF;
-	background-color: #DDD8C4;
-	padding: 4px 4px 4px 15px;
-	vertical-align: middle;
-	margin:0px;
-	color: #ffffff;
-}
-
-.wf_viewmenubuttondeselected a {
-	color: black;
-  	font-weight: normal;
-}
-
-.wf_viewmenubuttondeselected {
-	border-top: 1px solid #FFFFFF;
-	border-left: 1px solid #FFFFFF;
-	border-bottom: 1px solid #848284;
-	border-right: 1px solid #848284;
-	padding: 4px 4px 4px 15px;
-	vertical-align: middle;
-	margin:0px;
-}
 
 .wf_panel {
 	border-spacing: 0px;
@@ -373,7 +385,7 @@ a:hover {
 	vertical-align: middle;
 }
 
-/*Bezel*/
+/*Bezel Begin*/
 
 .wf_bezel
 {
@@ -383,20 +395,38 @@ a:hover {
         background-color:#C8C7BA;
 }
 
-/*Bezel*/
+/*Bezel End*/
 
 
 
-/*Workspace*/
+/*Workspace Begin*/
 
-.wf_workspacebar{
-	background-color: #666666;
-	color: white;
+.ws_head{
 	position: absolute;
 	top: 0px;
 	left: 0;
 	width: 55em; /* a width is required for Opera, older Mozilla browsers, and Konqueror browsers */
 	width: 100%;
+	height: 4em;
+}
+
+.ws_functionmenu{
+	position:absolute;
+	width:20em;
+	top:4em;
+	left:0em;
+}
+
+.ws_main{
+	position:absolute;
+	/***top:4em;***/
+	/***left:20em;***/
+	margin: 4em 0em 0em 20em;
+}
+
+.wf_workspacebar{
+	background-color: #666666;
+	color: white;
 	height: 4em;
 }
 
@@ -417,3 +447,5 @@ a:hover {
 	font-size: 12px;
 	display:inline;
 }
+
+/*Workspace End*/
