--- a/resources/style/webfacestyle.css
+++ b/resources/style/webfacestyle.css
@@ -13,7 +13,7 @@
 
 .wf_body a {
 	text-decoration: none;
-  	font-weight: bold;
+  	font-weight: normal;
 }
 
 .wf_body a:hover {
@@ -124,7 +124,7 @@
 }
 
 .wf_listtable {
-	border-spacing: 2px;
+	border-spacing: 0px;
 	padding: 2px;
 	width: 100%;
 }
@@ -137,14 +137,17 @@
 }
 
 .wf_listheading {
-	background-color: #d0daea;
+	background-color: #ffffff;
   	font-weight: bold;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 11px;
+        color:#4a4a4a;
+        padding-bottom:4px;
+        text-align:left;
 }
 
 .wf_listevenrow {
-	background-color: #f0f0f0;
+	background-color: #ffffff;
 }
 
 .wf_listevenrow td {
@@ -156,7 +159,7 @@
 }
 
 .wf_listoddrow {
-	background-color: #ffffff;
+	background-color: #f6f6f6;
 }
 
 .wf_listoddrow td{
@@ -168,15 +171,24 @@
 }
 
 .wf_listlink {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 11px;
   	font-weight: normal;
+        color:#414141;
+}
+
+.wf_listlink:hover {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 11px;
+  	font-weight: normal;
+        color:#414141;
 }
 
 .wf_listtext {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 11px;
   	font-weight: normal;
+        color:#878787;
 }
 
 /***WFMenu***/
@@ -267,6 +279,7 @@ wf_viewmenubuttondeselected .wf_viewmenu{
 	font-size: 85%;
 	text-decoration: none;
 	color: #333;
+        font-weight:bold;
 }
 
 .wf_tabbarbuttonselected, .wf_tabbarbuttondeselected a:hover 
