--- a/resources/style/webfacestyle.css
+++ b/resources/style/webfacestyle.css
@@ -54,6 +54,16 @@
 .wf_blockmainarea {
 	padding: 8px;
 	background-color: #E8E8E8;
+	margin 0px;
+}
+
+.wf_blockmainarea iframe{
+	min-height: 600px;
+	border:0px;
+	margin:0px;
+	padding:0px;
+	width:100%;
+	height:100px;
 }
 
 .wf_viewmenublockarea {
@@ -77,8 +87,6 @@
 	vertical-align: middle;
 	padding-left:3px;
 }
-
-
 
 .wf_titlebar * {
 	vertical-align: middle;
